--- a/product-details.html
+++ b/product-details.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="product__details__pic" style="background-color: unset;">
+        <div class="product__details__pic prdDetailImg" style="background-color: unset;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-9">
@@ -854,9 +854,6 @@
                     item.classList.add('d-none')
                 }
             }
-        }
-        function showToast() {
-            $('#favourite').toast('show');
         }
     </script>
     <!-- Js Plugins -->
