--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -43,9 +43,9 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
-                            <li class="active"><a href="#">Nữ</a></li>
+                            <li><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -111,111 +111,6 @@
         <!-- Cart begin -->
         <div class="cart" style="margin-top: 40px; margin-bottom: 60px;">
             <div id="cart-container" class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 mb-5 text-center">
-                        <span class=" font-weight-bold" style="font-size: 40px;">GIỎ HÀNG</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 col-md-8">
-                        <div class="list-item">
-                            <div class="col item pb-5">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <img class="h-100" src="img/nu/aophong/aophong1/4.webp" alt="">
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="d-flex">
-                                            <h2 class="font-weight-bold">Áo phông nữ cotton dáng ngắn in chữ</h2>
-                                            <button 
-                                                type="button"
-                                                class="close align-self-start font-weight-light"
-                                                data-dismiss="modal" aria-label="Close" style="font-size: 42px"
-                                                onclick="deleteItem()"
-                                            >
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <p class="mt-5" >Màu sắc: <span>Tím</span></p>
-                                        <p class="mt-4 " >Kích cỡ: <span>XL</span></p>
-                                        <h4 class="mt-4"><strong>149.500 đ</strong></h4>
-                                        <div class="row mt-4">
-                                            <div class="col-lg-5">
-                                                <div class="number-input" style="border: 1px solid #ddd;">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus">-</button>
-                                                    <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus">+</button>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-7 text-right m-auto">
-                                                <h4>TỔNG: <strong>149.500 đ</strong></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col item mt-5">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <!-- <img class="h-100" src="img/nu/aophong/aophong1/4.webp" alt=""> -->
-                                        
-                                        <img src="img/nam/2.jpg" alt="">
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="d-flex">
-                                            <h2 class="font-weight-bold">Quần nỉ nam cạp chun có hình in dáng rộng</h2>
-                                            <button 
-                                                type="button"
-                                                class="close align-self-start font-weight-light"
-                                                data-dismiss="modal" aria-label="Close" style="font-size: 42px"
-                                                onclick="deleteItem()"
-                                            >
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <p class="mt-5 " >Màu sắc: <span>Lục</span></p>
-                                        <p class="mt-4 " >Kích cỡ: <span>XL</span></p>
-                                        <h4 class="mt-4"><strong>149.500 đ</strong></h4>
-                                        <div class="row mt-4">
-                                            <div class="col-lg-5">
-                                                <div class="number-input" style="border: 1px solid #ddd;">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus">-</button>
-                                                    <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus">+</button>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-7 text-right m-auto">
-                                                <h4>TỔNG: <strong>149.500 đ</strong></h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 ">
-                        <div class="total-product-price border">
-                            <p class="">TỔNG ĐƠN HÀNG: 2 SẢN PHẨM</p>
-                            <div class="d-flex justify-content-between mt-5">
-                                <span class=""><strong>Giá</strong></span>
-                                <span class="">599.000 <span style="text-decoration: underline;">đ</span></span>
-                            </div>
-                        </div>
-                        <div class="coupon mt-5">
-                            <label class="">Mã giảm giá</label>
-                            <input type="text" placeholder="Nhập mã">
-                            <div class="detail mt-2">Áp dụng Mã giảm giá của bạn để được giảm giá nhiều hơn!</div>
-                        </div>
-                        <div class="total">
-                            <div class="d-flex justify-content-between mt-5">
-                                <span class=""><strong>Tổng tiền</strong></span>
-                                <span class=""><strong>599.000 <span style="text-decoration: underline;">đ</span></strong></span>
-                            </div>
-                            <div class="mt-2 ">Miễn phí vận chuyển áp dụng cho đơn hàng giao tận nơi từ 299.000 đ với tất cả các đơn hàng!</div>
-                            <a href="/checkout.html" class="btn btn-danger w-100 mt-4 "><strong>THANH TOÁN</strong></a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <!-- Cart end -->
@@ -407,8 +302,132 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
+    <div id="removeCart" class="toast bg-success-custom" data-delay="5000">
+        <div class="toast-body d-flex">
+            <span class="m-auto px-3"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+            <p>
+               Xóa khỏi giỏ hàng thành công! 
+            </p>
+        </div>
+    </div>
     <script>
+        let totalPrice = [];
+        refreshCart();
+        function refreshCart(){
+            let data = JSON.parse(localStorage.getItem('cartData'));
+            var content = "";
+            if(data?.length <= 0){
+                content = `<div id="favourite-empty" class="row py-5 px-5">
+                    <div class="col">
+                        <div class="row">
+                            <img src="/img/empty-cart.png" alt="">
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 mx-auto text-center">
+                                <h3 class="font-weight-bold">GIỎ HÀNG RỖNG</h3>
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-lg-12 col-md-12 mx-auto text-center">
+                                <p class="">Không có sản phẩm nào trong giỏ hàng của bạn.</p>
+                            </div>
+                        </div>
+                        <a href="#" class="col btn btn-dark text-center mt-5 py-2">TIẾP TỤC MUA SẮM</a>
+                    </div>
+                </div>`;
+            } else {
+                content = `<div class="row">
+                    <div class="col-lg-12 col-md-12 mb-5 text-center">
+                        <span class=" font-weight-bold" style="font-size: 40px;">GIỎ HÀNG</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 col-md-8">
+                        <div class="list-item">`;
+                data.forEach((item, index) => {
+                    var prePrice = item?.price?.slice(0, -2);
+                    var price = prePrice.replace(".", "");
+                    totalPrice.push(price * 1);
+                    let stringItem = JSON.stringify(item);
+                    content += `<div class="col item py-3">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <img class="h-100" src="./${item?.imgUrl}" alt="">
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <div class="d-flex" style="justify-content: space-between;">
+                                            <h2 class="font-weight-bold">${item?.title}</h2>
+                                            <button 
+                                                type="button"
+                                                class="close align-self-start font-weight-light"
+                                                data-dismiss="modal" aria-label="Close" style="font-size: 42px"
+                                                onclick='removeCardItem(${stringItem})'
+                                            >
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <p class="mt-5" >Màu sắc: <span>Tím</span></p>
+                                        <p class="mt-4 " >Kích cỡ: <span>XL</span></p>
+                                        <h4 class="mt-4"><strong>${item?.price}</strong></h4>
+                                        <div class="row mt-4">
+                                            <div class="col-lg-5">
+                                                <div class="number-input" style="border: 1px solid #ddd;">
+                                                    <button onclick='this.parentNode.querySelector("input[type=number]").stepDown(); recalculateTotal(${JSON.stringify(item?.price)}, ${index})' class="minus">-</button>
+                                                    <input id="${index}" class="quantity" min="0" name="quantity" value="1" type="number" style="border: none">
+                                                    <button onclick='this.parentNode.querySelector("input[type=number]").stepUp(); recalculateTotal(${JSON.stringify(item?.price)}, ${index})' class="plus">+</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-7 text-right m-auto">
+                                                <h4>TỔNG: <strong id="total-${index}">${totalPrice[index].toLocaleString('vi', {style : 'currency', currency : 'VND'})}</strong></h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>`;
+                });
+            }
+            content += `</div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 ">
+                        <div class="total-product-price border">
+                            <p class="">TỔNG ĐƠN HÀNG: 2 SẢN PHẨM</p>
+                            <div class="d-flex justify-content-between mt-5">
+                                <span class=""><strong>Giá</strong></span>
+                                <span class="" id="totalAmountB"> <span style="text-decoration: underline;">đ</span></span>
+                            </div>
+                        </div>
+                        <div class="coupon mt-5">
+                            <label class="">Mã giảm giá</label>
+                            <input type="text" placeholder="Nhập mã" class="m-0" />
+                            <div class="detail mt-2">Áp dụng Mã giảm giá của bạn để được giảm giá nhiều hơn!</div>
+                        </div>
+                        <div class="total">
+                            <div class="d-flex justify-content-between mt-5">
+                                <span class=""><strong>Tổng tiền</strong></span>
+                                <span class=""><strong id="totalAmountA"><span style="text-decoration: underline;">đ</span></strong></span>
+                            </div>
+                            <div class="mt-2 ">Miễn phí vận chuyển áp dụng cho đơn hàng giao tận nơi từ 299.000 đ với tất cả các đơn hàng!</div>
+                            <a href="/checkout.html" class="btn btn-danger w-100 mt-4 "><strong>THANH TOÁN</strong></a>
+                        </div>
+                    </div>
+                </div>`;
+            document.getElementById("cart-container").innerHTML = content;
+            data.forEach((item, index) => {
+                setTimeout(() => {
+                    recalculateTotal(item?.price, index);
+                }, 200)
+            });
+        }
+        function recalculateTotal(priceText, index){
+            var quantity = $(`input[type=number][id=${index}]`).val();
+            var prePrice = priceText.slice(0, -2);
+            var price = prePrice.replace(".", "");
+            totalPrice[index] = price * quantity;
+            document.getElementById(`total-${index}`).innerHTML = totalPrice[index].toLocaleString('vi', {style : 'currency', currency : 'VND'});
+            var totalMount = totalPrice.reduce((a, b) => a + b, 0).toLocaleString('vi', {style : 'currency', currency : 'VND'});
+            document.getElementById("totalAmountB").innerHTML = totalMount;
+            document.getElementById("totalAmountA").innerHTML = totalMount;
+        }
         function deleteItem(){
             event.target.closest('.item').remove()
             const items = document.querySelectorAll('.list-item .item')
